Fix: mobile alignment

--- a/style.css
+++ b/style.css
@@ -76,6 +76,8 @@ html {
 .cta {
     font-size: 1.5em;
     margin-top: 57px;
+    flex-wrap: nowrap;
+    display: flex;
     margin-left: 20px;
 
 }
@@ -86,6 +88,7 @@ html {
     padding: 15px;
     margin-top: 20px;
     border-radius: 15px;
+    max-width: 300px;
     /* text-transform: uppercase; */
 }
 
@@ -368,5 +371,20 @@ html {
     }
     .curls{
         width: 96vw;
+    }
+
+    nav ul{
+        gap: 13px;
+    }
+
+    ul li{
+        font-size: 1.4rem;
+    }
+    .cta{
+       margin-left: 9px;
+    }
+    .main-line{
+        font-size: 1.5rem;
+        font-weight: bolder;
     }
 }
